--- a/short_tutorials/using-uv.html
+++ b/short_tutorials/using-uv.html
@@ -196,7 +196,7 @@
                         <tr>
                             <td>Run tools</td>
                             <td>pipx</td>
-                            <td>uvx run</td>
+                            <td>uvx</td>
                             <td>Faster</td>
                         </tr>
                     </tbody>
