--- a/short_tutorials/using-uv.html
+++ b/short_tutorials/using-uv.html
@@ -67,7 +67,7 @@
                 <h3>It makes Python packaging work</h3>
                 <p class="small-text">The only Python packaging system I've ever recommended</p>
                 <p>&nbsp;</p>
-                <p class="small-text">Andy Casey</p>
+                <p class="small-text">Andy Casey<br />with help from Lehman Garrison</p>
             </section>
 
             <!-- Slide 2: What is uv? -->
